@@ -23,7 +23,7 @@
 #
 ################################################################################
 
-inherit qt4
+inherit cmake qt4
 
 HOMEPAGE="http://www.kde.org/"
 
